<?xml version="1.0" encoding="UTF-8"?>
<project
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
  xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.mondo.wt.cstudy</groupId>
  <artifactId>org.mondo.wt.cstudy.tycho</artifactId>
  <version>1.0.0-SNAPSHOT</version>
  <packaging>pom</packaging>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <tycho-version>0.23.0</tycho-version>
    <tycho.extras.version>${tycho-version}</tycho.extras.version>
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>
    <xtend-version>2.8.4</xtend-version>
    <java.version>1.8</java.version>
    <maven.compiler.compilerVersion>1.8</maven.compiler.compilerVersion>
    <jacoco.version>0.7.0.201403182114</jacoco.version>
		<jacoco.targetdir>${project.basedir}/../../target</jacoco.targetdir>
    <incquery.compiler.version>1.1.0-SNAPSHOT</incquery.compiler.version>
  </properties>

  <modules>
    <module>../../DSL-tao/org.mondo.wt.cstudy</module>
    <module>../../DSL-tao/org.mondo.wt.cstudy.edit</module>
    <module>../../DSL-tao/org.mondo.wt.cstudy.editor</module>
    <module>../../DSL-tao/org.mondo.wt.cstudy.modular</module>
    <module>../../MONDO-Collab/org.mondo.wt.cstudy.merge</module>
    <module>../../MONDO-Collab/org.mondo.wt.cstudy.lens</module>
    <module>../../Tycho-build/org.mondo.wt.cstudy.lens.product</module>
    <module>../../Tycho-build/org.mondo.wt.cstudy.model.feature</module>
    <module>../../Tycho-build/org.mondo.wt.cstudy.editor.feature</module>
    <module>../../Tycho-build/org.mondo.wt.cstudy.merge.feature</module>
    <module>../../Tycho-build/org.mondo.wt.cstudy.updatesite</module>
  </modules>

  <pluginRepositories>
		<pluginRepository>
			<id>central</id>
			<name>Maven Central</name>
			<url>http://repo.maven.apache.org/maven2</url>
		</pluginRepository>
		<pluginRepository>
			<id>eclipse.plugin.repository</id>
			<name>repo.eclipse.org Plug-in repository</name>
			<url>https://repo.eclipse.org/content/repositories/cbi-releases/</url>
		</pluginRepository>
		<pluginRepository>
			<id>incquery-snapshots</id>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
			<releases>
				<enabled>true</enabled>
			</releases>
			<url>https://repo.eclipse.org/content/repositories/emf-incquery/</url>
		</pluginRepository>
    <pluginRepository>
      <id>sonatype</id>
      <url>http://repository.sonatype.org/content/groups/sonatype-public-grid/</url>
      <releases>
        <enabled>true</enabled>
      </releases>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
    </pluginRepository>
  </pluginRepositories>

  <repositories>
		<repository>
			<id>central</id>
			<name>Maven Central</name>
			<url>http://repo.maven.apache.org/maven2</url>
		</repository>
    <repository>
			<id>xtext</id>
			<layout>p2</layout>
			<url>http://download.eclipse.org/modeling/tmf/xtext/updates/composite/milestones/</url>
		</repository>
    <repository>
			<id>incquery.update</id>
			<layout>p2</layout>
			<url>http://download.eclipse.org/incquery/updates/integration</url>
		</repository>
    <repository>
			<id>viatra.update</id>
			<layout>p2</layout>
			<url>http://download.eclipse.org/viatra2/emf/updates/integration</url>
		</repository>
    <repository>
			<id>mondo.collaboration</id>
			<layout>p2</layout>
			<url>https://build.inf.mit.bme.hu/jenkins/view/All/job/MONDO-Collaboration/lastSuccessfulBuild/artifact/releng/org.mondo.collaboration.security.updatesite/target/repository/</url>
		</repository>
    <repository>
			<id>mondo.collaboration.merge</id>
			<layout>p2</layout>
			<url>https://build.inf.mit.bme.hu/jenkins/view/All/job/MONDO-DSE-Merge/lastSuccessfulBuild/artifact/releng/org.eclipse.viatra.dse.merge.update/target/repository/</url>
		</repository>
    <repository>
			<id>viatra.obfuscator</id>
			<layout>p2</layout>
			<url>https://hudson.eclipse.org/viatra/job/viatra-modelobfuscator-master/lastSuccessfulBuild/artifact/releng/org.eclipse.viatra.modelobfuscator.update/target/repository/</url>
		</repository>
    <repository>
			<id>dsl.tao</id>
			<layout>p2</layout>
			<url>http://jdelara.github.io/DSL-tao/update-site/</url>
		</repository>
    <repository>
			<id>emf.splitter</id>
			<layout>p2</layout>
			<url>http://antoniogarmendia.github.io/EMF-Splitter/update-site/</url>
		</repository>
    <repository>
      <id>mars</id>
      <layout>p2</layout>
      <url>http://download.eclipse.org/releases/mars</url>
    </repository>
    <repository>
      <id>eclipse.update</id>
      <layout>p2</layout>
      <url>http://download.eclipse.org/eclipse/updates/4.5</url>
    </repository>
	</repositories>

  <distributionManagement>
		<repository>
			<id>repo.eclipse.org</id>
			<name>EMF-IncQuery Project Repository - Releases</name>
			<url>https://repo.eclipse.org/content/repositories/emf-incquery-releases/</url>
		</repository>
		<snapshotRepository>
			<id>repo.eclipse.org</id>
			<name>EMF-IncQuery Project Repository - Snapshots</name>
			<url>https://repo.eclipse.org/content/repositories/emf-incquery-snapshots/</url>
		</snapshotRepository>
	</distributionManagement>

  <build>
  <plugins>
    <plugin>
      <groupId>org.apache.maven.plugins</groupId>
      <artifactId>maven-compiler-plugin</artifactId>
      <version>3.1</version>
      <configuration>
        <compilerVersion>${java.version}</compilerVersion>
        <source>${java.version}</source>
        <target>${java.version}</target>
      </configuration>
    </plugin>
    <plugin>
      <groupId>org.eclipse.tycho</groupId>
      <artifactId>tycho-maven-plugin</artifactId>
      <version>${tycho-version}</version>
      <extensions>true</extensions>
      <configuration>
        <compilerVersion>${java.version}</compilerVersion>
        <source>${java.version}</source>
        <target>${java.version}</target>
      </configuration>
    </plugin>
    <plugin>
      <groupId>org.eclipse.tycho</groupId>
      <artifactId>target-platform-configuration</artifactId>
      <version>${tycho-version}</version>
    </plugin>
    <plugin>
      <groupId>org.eclipse.tycho</groupId>
      <artifactId>tycho-source-plugin</artifactId>
      <version>${tycho-version}</version>
      <executions>
        <execution>
          <id>plugin-source</id>
          <goals>
            <goal>plugin-source</goal>
          </goals>
        </execution>
      </executions>
    </plugin>
  </plugins>
  <pluginManagement>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-clean-plugin</artifactId>
        <version>2.5</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.1</version>
        <configuration>
          <compilerVersion>${java.version}</compilerVersion>
          <source>${java.version}</source>
          <target>${java.version}</target>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.eclipse.tycho</groupId>
        <artifactId>tycho-compiler-plugin</artifactId>
        <version>${tycho-version}</version>
        <extensions>true</extensions>
        <configuration>
          <source>${java.version}</source>
          <target>${java.version}</target>
          <environments>
            <environment>
              <os>win32</os>
              <ws>win32</ws>
              <arch>x86</arch>
            </environment>
            <environment>
              <os>linux</os>
              <ws>gtk</ws>
              <arch>x86_64</arch>
            </environment>
            <environment>
              <os>macosx</os>
              <ws>cocoa</ws>
              <arch>x86_64</arch>
            </environment>
          </environments>
          <ignoreTychoRepositories>true</ignoreTychoRepositories>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.eclipse.tycho</groupId>
        <artifactId>tycho-surefire-plugin</artifactId>
        <version>${tycho-version}</version>
      </plugin>
      <plugin>
        <groupId>org.eclipse.tycho</groupId>
        <artifactId>tycho-p2-repository-plugin</artifactId>
        <version>${tycho-version}</version>
      </plugin>
      <plugin>
        <groupId>org.eclipse.xtend</groupId>
        <artifactId>xtend-maven-plugin</artifactId>
        <version>${xtend-version}</version>
        <configuration>
          <!-- need to prefix by basedir to generate to currently built module -->
          <outputDirectory>${basedir}/xtend-gen</outputDirectory>
          <javaSourceVersion>${java.version}</javaSourceVersion>
        </configuration>
      </plugin>
      <plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>${jacoco.version}</version>
				<configuration>
					<destFile>${jacoco.targetdir}/jacoco.exec</destFile>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
  </pluginManagement>
</build>
	<profiles>
		<profile>
			<id>skip-ui-tests</id>
			<activation>
				<property>
					<name>skip-ui-tests</name>
				</property>
			</activation>
			<properties>
				<tycho.surefire.skipUiTest>true</tycho.surefire.skipUiTest>
			</properties>
		</profile>
		<profile>
			<id>macosx</id>
			<activation>
				<os>
					<name>mac os x</name>
					<family>mac</family>
				</os>
			</activation>
			<properties>
				<ui.test.vmargs>-Xmx512m -XX:MaxPermSize=256m -XstartOnFirstThread</ui.test.vmargs>
			</properties>
		</profile>
		<profile>
			<id>other-os</id>
			<activation>
				<os>
					<name>not-mac</name>
					<family>!mac</family>
				</os>
			</activation>
			<properties>
				<ui.test.vmargs>-Xmx512m -XX:MaxPermSize=256m</ui.test.vmargs>
			</properties>
		</profile>
	</profiles>

	<licenses>
		<license>
			<name>Eclipse Public License v1.0</name>
			<comments>
       All rights reserved.

       This program and the accompanying materials are made
       available under the terms of the Eclipse Public License v1.0
       which accompanies this distribution, and is available at
       http://www.eclipse.org/legal/epl-v10.htm
      </comments>
		</license>
	</licenses>
</project>
